feature(Global): add verification with class-validato r and add admin exist verification
